Initialize connection to devices asynchronously
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>